# PhysicsEngine2D

./: .gitignore  CMakeLists.txt
include/physics/: RigidBody.h  World.h
include/physics/collision/: CollisionDetection.h  CollisionManifold.h  CollisionResolution.h
include/physics/math/: Vector2.h
include/physics/shapes/: BoxShape.h  CircleShape.h  Shape.h
src/: BoxShape.cpp  CollisionDetection.cpp  CollisionResolution.cpp  RigidBody.cpp  World.cpp  main.cpp
